added rounds to challenges and added a test for Game object